--- a/src/components/Button/style/index.less
+++ b/src/components/Button/style/index.less
@@ -49,4 +49,25 @@
       border-color: #40a9ff;
     }
   }
+  .livid-loading{
+    display: inline-block;
+    position: relative;
+    top: 2px;
+    right: 5px;
+    width: 12px;
+    height: 12px;
+    clip-path: polygon(0 100%, 50% 100%, 50% 0%, 0 0%);
+    border-radius: 50%;
+    border: 1px solid #fff;
+    animation: livid-loading-spin 1s linear infinite;
+  }
+  
+}
+@keyframes livid-loading-spin {
+    from{
+      transform: rotate(0);
+    }
+    to{
+      transform: rotate(1turn);
+    }
 }
