--- a/src/components/Button/style/index.less
+++ b/src/components/Button/style/index.less
@@ -1,4 +1,4 @@
-.livid-button {
+.livod-button {
   line-height: 1.5715;
   position: relative;
   display: inline-block;
@@ -49,7 +49,7 @@
       border-color: #40a9ff;
     }
   }
-  .livid-loading{
+  .livod-loading {
     display: inline-block;
     position: relative;
     top: 2px;
@@ -59,15 +59,46 @@
     clip-path: polygon(0 100%, 50% 100%, 50% 0%, 0 0%);
     border-radius: 50%;
     border: 1px solid #fff;
-    animation: livid-loading-spin 1s linear infinite;
+    animation: livod-loading-spin 1s linear infinite;
   }
-  
+  &.danger {
+    color: #ff4d4f;
+    background: #fff;
+    border-color: #ff4d4f;
+    &:active,
+    &:hover,
+    &:focus {
+      color: #ff7875;
+      background: #fff;
+      border-color: #ff7875;
+    }
+    .livod-loading {
+      border: 1px solid #ff7875;
+    }
+  }
+  .btn-disabled{
+    color: rgba(0, 0, 0, 0.25);
+    background: #f5f5f5;
+    border-color: #d9d9d9;
+    text-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    cursor: not-allowed;
+  }
+  &[disabled] {
+    .btn-disabled();
+    &:active,
+    &:hover,
+    &:focus {
+      .btn-disabled();
+    }
+  }
 }
-@keyframes livid-loading-spin {
-    from{
-      transform: rotate(0);
-    }
-    to{
-      transform: rotate(1turn);
-    }
+@keyframes livod-loading-spin {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(1turn);
+  }
 }
