--- a/src/components/Modal/style/index.less
+++ b/src/components/Modal/style/index.less
@@ -1,4 +1,4 @@
-.livod-modal-footer{
+.livod-modal-footer {
   padding: 10px 16px;
   text-align: right;
   background: 0 0;
@@ -6,13 +6,13 @@
   border-radius: 0 0 2px 2px;
 }
 
-.livod-modal-body{
+.livod-modal-body {
   padding: 24px;
   font-size: 14px;
   line-height: 1.5715;
   word-wrap: break-word;
 }
-.livod-modal-closex{
+.livod-modal-closex {
   display: block;
   width: 56px;
   height: 56px;
@@ -23,7 +23,7 @@
   text-transform: none;
   text-rendering: auto;
 }
-.livod-modal-close{
+.livod-modal-close {
   position: absolute;
   top: 0;
   right: 0;
@@ -40,7 +40,7 @@
   -webkit-transition: color 0.3s;
   transition: color 0.3s;
 }
-.livod-modal-header{
+.livod-modal-header {
   padding: 16px 24px;
   color: rgba(0, 0, 0, 0.85);
   background: #fff;
@@ -48,7 +48,7 @@
   border-radius: 2px 2px 0 0;
   box-sizing: border-box;
 }
-.livod-modal-title{
+.livod-modal-title {
   margin: 0;
   color: rgba(0, 0, 0, 0.85);
   font-weight: 500;
@@ -56,7 +56,7 @@
   line-height: 22px;
   word-wrap: break-word;
 }
-.livod-backdrop{
+.livod-backdrop {
   position: fixed;
   z-index: 1040;
   top: 0;
@@ -68,7 +68,7 @@
 }
 // we use some pseudo random coords so nested modals
 // don't sit right on top of each other.
-.livod-fixed-modal{
+.livod-fixed-modal {
   position: fixed;
   width: 400px;
   z-index: 1040;
@@ -76,4 +76,27 @@
   left: calc(50% - 200px);
   background-color: white;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+}
+.ant-modal-confirm-title {
+  display: block;
+  overflow: hidden;
+  color: rgba(0, 0, 0, 0.85);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.4;
+}
+.ant-modal-confirm-content {
+  margin-top: 8px;
+  color: rgba(0, 0, 0, 0.85);
+  font-size: 14px;
+  margin-left: 38px;
+}
+.anticon-exclamation-circle {
+  float: left;
+  margin-right: 16px;
+  font-size: 22px;
+  line-height: 0;
+  &.warning {
+    color: #faad14;
+  }
 }
