fix: 修复了less类名有误的问题

--- a/src/components/Modal/style/index.less
+++ b/src/components/Modal/style/index.less
@@ -66,13 +66,10 @@
   border-radius: 2px 2px 0 0;
   box-sizing: border-box;
 }
-.livod-modal-title {
-  margin: 0;
+.livod-modal-confirm-title {
   color: rgba(0, 0, 0, 0.85);
   font-weight: 500;
   font-size: 16px;
-  line-height: 22px;
-  word-wrap: break-word;
 }
 .livod-backdrop {
   position: fixed;
@@ -96,7 +93,7 @@
   background-color: white;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
-.ant-modal-confirm-title {
+.livod-modal-confirm-title {
   display: block;
   overflow: hidden;
   color: rgba(0, 0, 0, 0.85);
@@ -104,11 +101,11 @@
   font-size: 16px;
   line-height: 1.4;
 }
-.ant-modal-confirm-content {
+.livod-modal-confirm-content {
   margin-top: 8px;
   color: rgba(0, 0, 0, 0.85);
   font-size: 14px;
-  margin-left: 38px;
+  text-indent: 38px;
 }
 
 .no-border {
