--- a/src/components/Modal/style/index.less
+++ b/src/components/Modal/style/index.less
@@ -1,5 +1,5 @@
 .livod-modal-footer {
-  padding: 10px 16px;
+  padding: 0 32px 24px;
   text-align: right;
   background: 0 0;
   border-top: 1px solid #f0f0f0;
@@ -7,7 +7,7 @@
 }
 
 .livod-modal-body {
-  padding: 24px;
+  padding: 32px 32px 24px;
   font-size: 14px;
   line-height: 1.5715;
   word-wrap: break-word;
