--- a/src/components/Modal/style/index.less
+++ b/src/components/Modal/style/index.less
@@ -1,13 +1,26 @@
 .livod-modal-footer {
-  padding: 0 32px 24px;
+  padding: 10px 16px;
+  &.no-border {
+    padding: 20px 32px 24px;
+  }
   text-align: right;
   background: 0 0;
   border-top: 1px solid #f0f0f0;
   border-radius: 0 0 2px 2px;
 }
-
+.livod-modal-title {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.85);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  word-wrap: break-word;
+}
 .livod-modal-body {
-  padding: 32px 32px 24px;
+  &:first-child {
+    padding: 32px 32px 0px;
+  }
+  padding: 24px;
   font-size: 14px;
   line-height: 1.5715;
   word-wrap: break-word;
@@ -85,7 +98,7 @@
 // don't sit right on top of each other.
 .livod-fixed-modal {
   position: fixed;
-  width: 400px;
+  width: 500px;
   z-index: 1040;
   top: 20%;
   left: 50%;
