feat: Input组件添加error样式

--- a/src/components/Input/style/index.less
+++ b/src/components/Input/style/index.less
@@ -20,6 +20,9 @@
   border-radius: 2px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  &.has-error {
+    border-color: #ff4d4f;
+  }
   &:hover {
     border-color: #40a9ff;
     border-right-width: 1px !important;
