--- a/src/style/index.less
+++ b/src/style/index.less
@@ -8,3 +8,16 @@ body {
     margin-left: 8px;
   }
 }
+a {
+  color: #1890ff;
+  text-decoration: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+  -webkit-text-decoration-skip: objects;
+  &:hover {
+    color: #40a9ff;
+  }
+}
