fix: 调整了Input error情况下的样式

--- a/src/components/Input/style/index.less
+++ b/src/components/Input/style/index.less
@@ -21,7 +21,19 @@
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   &.has-error {
+    background-color: #fff;
     border-color: #ff4d4f;
+    &:focus {
+      border-color: #ff7875;
+      border-right-width: 1px !important;
+      outline: 0;
+      -webkit-box-shadow: 0 0 0 2px rgba(255, 77, 79, 0.2);
+      box-shadow: 0 0 0 2px rgba(255, 77, 79, 0.2);
+    }
+    &:hover {
+      background-color: #fff;
+      border-color: #ff4d4f;
+    }
   }
   &:hover {
     border-color: #40a9ff;
